--- a/devdacticLogin/src/app/members/dashboard/dashboard.page.html
+++ b/devdacticLogin/src/app/members/dashboard/dashboard.page.html
@@ -12,7 +12,7 @@
 
     <ion-tab-button tab="alarms">
       <ion-icon name="alarm"></ion-icon>
-      <ion-label>Alarmes</ion-label>
+      <ion-label>Alarmes(Em Breve)</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
