--- a/devdacticLogin/src/app/members/home/home.page.html
+++ b/devdacticLogin/src/app/members/home/home.page.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="orangePex">
     <ion-buttons slot="start">
       <ion-button (click)="logout()">
         <ion-icon slot="icon-only" name="log-out"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Pex Automação</ion-title>
+    <ion-title>Minha casa</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -97,3 +97,23 @@
     </p>
   </div>
 </ion-content>
+
+<style>
+  .round {
+    width: 150px;
+    height: 150px;
+    font-size: 15px;
+  }
+
+  .Sround {
+    width: 75px;
+    height: 75px;
+  }
+
+  ion-icon {
+    font-size: 64px;
+  }
+  ion-toolbar {
+    background-color: #fa840f;
+  }
+</style>
