--- a/devdacticLogin/src/app/members/alarms/alarms.page.html
+++ b/devdacticLogin/src/app/members/alarms/alarms.page.html
@@ -14,17 +14,29 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <div class="teste">
-    <div class="x1">
-      <div><ion-icon name="bulb" class="bulb"></ion-icon></div>
+  <div class="testei">
+    <div class="x1i">
+      <div><ion-icon name="snow" class="bulbi"></ion-icon></div>
 
-      <div class="x12">
-        <div><span ion-text color="secondary">Lâmpada</span></div>
+      <div class="x12i">
+        <div><span ion-text color="secondary">Ar condicionado</span></div>
         <div><span ion-text class="secondWord">Sala</span></div>
       </div>
     </div>
-    <div class="x2">
+
+    <div class="x2i">
       <ion-checkbox></ion-checkbox>
+      <div class="opas"></div>
+    </div>
+
+    <div class="x11i">
+      <div class="rola">Tº:19</div>
+      <ion-button class="botao"
+        ><ion-icon name="arrow-up"></ion-icon
+      ></ion-button>
+      <ion-button class="botao"
+        ><ion-icon name="arrow-down"></ion-icon
+      ></ion-button>
     </div>
   </div>
 </ion-content>
