--- a/devdacticLogin/src/app/members/dashboard/dashboard.page.html
+++ b/devdacticLogin/src/app/members/dashboard/dashboard.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" color="dark">
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
       <ion-label>Minha casa</ion-label>
@@ -10,9 +10,9 @@
       <ion-label>Cenas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="alarms">
+    <ion-tab-button>
       <ion-icon name="alarm"></ion-icon>
-      <ion-label>Alarmes(Em Breve)</ion-label>
+      <ion-label>Em breve</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
