--- a/devdacticLogin/src/app/members/cenas/cenas.page.html
+++ b/devdacticLogin/src/app/members/cenas/cenas.page.html
@@ -16,23 +16,30 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding class="background">
-  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
-
-  <div *ngFor="let cenas of cenas">
-    <div class="buttons">
-      <ion-button class="bot" fill="outline" (click)="enviarCena(cenas._id)"
-        >{{cenas.name}}</ion-button
+<ion-content>
+  <div class="background">
+    <div class="refresh">
+      <ion-refresher
+        class="refresh"
+        slot="fixed"
+        (ionRefresh)="doRefresh($event)"
       >
-      <ion-button
-        class="delCena"
-        fill="outline"
-        color="danger"
-        (click)="deletarCena(cenas._id)"
-        ><ion-icon name="close" class="icon"></ion-icon
-      ></ion-button>
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
+    </div>
+    <div *ngFor="let cenas of cenas">
+      <div class="buttons">
+        <ion-button class="bot" fill="outline" (click)="enviarCena(cenas._id)"
+          >{{cenas.name}}</ion-button
+        >
+        <ion-button
+          class="delCena"
+          fill="outline"
+          color="danger"
+          (click)="deletarCena(cenas._id)"
+          ><ion-icon name="close" class="icon"></ion-icon
+        ></ion-button>
+      </div>
     </div>
   </div>
 </ion-content>
