--- a/devdacticLogin/src/app/members/home/home.page.html
+++ b/devdacticLogin/src/app/members/home/home.page.html
@@ -9,230 +9,244 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding class="background">
-  <ion-grid>
-    <ion-row wrap>
-      <ion-col col-6 *ngFor="let devices of devices">
-        <div *ngIf="devices.type === 'lampada' ">
-          <div *ngIf="devices.estado_atual.estado === 'ligado' ">
-            <div
-              class="teste ion-activatable"
-              (click)="publish(devices._id,{'estado': 'desligado'})"
-            >
-              <ion-ripple-effect></ion-ripple-effect>
-              <div class="x1">
-                <div><ion-icon name="bulb" class="bulb"></ion-icon></div>
+<ion-content>
+  <div class="background">
+    <ion-refresher
+      class="refresh"
+      slot="fixed"
+      (ionRefresh)="doRefresh($event)"
+    >
+      <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
 
-                <div class="x12">
-                  <div>
-                    <span text class="devicesID">{{devices.id}}</span>
-                  </div>
-                  <div><span text class="secondWord">Diretoria</span></div>
-                </div>
-              </div>
-              <div class="x2">
-                <ion-icon name="radio-button-on" class="checkon"></ion-icon>
-              </div>
-            </div>
-          </div>
-
-          <div *ngIf="devices.estado_atual.estado === 'desligado' ">
-            <div
-              class="teste ion-activatable"
-              (click)="publish(devices._id,{'estado': 'ligado'})"
-            >
-              <ion-ripple-effect></ion-ripple-effect>
-              <div class="x1">
-                <div><ion-icon name="bulb" class="bulb"></ion-icon></div>
-
-                <div class="x12">
-                  <div>
-                    <span text class="devicesID">{{devices.id}}</span>
-                  </div>
-                  <div><span text class="secondWord">Diretoria</span></div>
-                </div>
-              </div>
-              <div class="x2">
-                <ion-icon name="radio-button-off" class="checkoff"></ion-icon>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div *ngIf="devices.type === 'ar condicionado' ">
-          <div *ngIf="devices.estado_atual.estado ==='ligado'">
-            <div class="testei">
+    <ion-grid>
+      <ion-row wrap>
+        <ion-col col-6 *ngFor="let devices of devices">
+          <div *ngIf="devices.type === 'lampada' ">
+            <div *ngIf="devices.estado_atual.estado === 'ligado' ">
               <div
-                class="x1i ion-activatable"
+                class="teste ion-activatable"
                 (click)="publish(devices._id,{'estado': 'desligado'})"
               >
                 <ion-ripple-effect></ion-ripple-effect>
-                <div><ion-icon name="snow" class="bulbi"></ion-icon></div>
+                <div class="x1">
+                  <div><ion-icon name="bulb" class="bulb"></ion-icon></div>
 
-                <div class="x12i">
-                  <div>
-                    <span ion-text class="devicesID">{{devices.id}}</span>
+                  <div class="x12">
+                    <div>
+                      <span text class="devicesID">{{devices.id}}</span>
+                    </div>
+                    <div><span text class="secondWord">Diretoria</span></div>
                   </div>
-                  <div><span ion-text class="secondWord">Diretoria</span></div>
+                </div>
+                <div class="x2">
+                  <ion-icon name="radio-button-on" class="checkon"></ion-icon>
                 </div>
               </div>
-
-              <div class="x2i">
-                <ion-icon name="radio-button-on" class="checkon"></ion-icon>
-                <div class="opas"></div>
-              </div>
-
-              <div class="x11i">
-                <div class="x15i"></div>
-                <div class="rola">Tº: <ion-label>{{temp}}</ion-label></div>
-                <div class="x14i"></div>
-                <ion-button
-                  class="botao"
-                  (click)="temp===30?temp=temp:temp=temp+1"
-                  (click)="publish(devices._id,{'temperatura': temp} )"
-                  fill="outline"
-                  ><ion-icon name="arrow-up" class="icone"></ion-icon
-                ></ion-button>
-                <ion-button
-                  class="botao"
-                  (click)="temp===16?temp=temp:temp=temp-1"
-                  (click)="publish(devices._id,{'temperatura': temp} )"
-                  fill="outline"
-                  ><ion-icon name="arrow-down" class="icone"></ion-icon
-                ></ion-button>
-              </div>
             </div>
-          </div>
 
-          <div *ngIf="devices.estado_atual.estado ==='desligado'">
-            <div class="testei">
+            <div *ngIf="devices.estado_atual.estado === 'desligado' ">
               <div
-                class="x1i ion-activatable"
+                class="teste ion-activatable"
                 (click)="publish(devices._id,{'estado': 'ligado'})"
               >
                 <ion-ripple-effect></ion-ripple-effect>
-                <div><ion-icon name="flame" class="bulbi"></ion-icon></div>
+                <div class="x1">
+                  <div><ion-icon name="bulb" class="bulb"></ion-icon></div>
 
-                <div class="x12i">
-                  <div>
-                    <span ion-text class="devicesID">{{devices.id}}</span>
+                  <div class="x12">
+                    <div>
+                      <span text class="devicesID">{{devices.id}}</span>
+                    </div>
+                    <div><span text class="secondWord">Diretoria</span></div>
                   </div>
-                  <div><span ion-text class="secondWord">Diretoria</span></div>
                 </div>
-              </div>
-
-              <div class="x2i">
-                <ion-icon name="radio-button-off" class="checkoff"></ion-icon>
-                <div class="opas"></div>
-              </div>
-
-              <div class="x11i">
-                <div class="x15i"></div>
-                <div class="rola">Tº: <ion-label>{{temp}}</ion-label></div>
-                <div class="x14i"></div>
-                <ion-button
-                  class="botao"
-                  (click)="temp===30?temp=temp:temp=temp+1"
-                  (click)="publish(devices._id,{'temperatura': temp} )"
-                  fill="outline"
-                  ><ion-icon name="arrow-up" class="icone"></ion-icon
-                ></ion-button>
-                <ion-button
-                  class="botao"
-                  (click)="temp===16?temp=temp:temp=temp-1"
-                  (click)="publish(devices._id,{'temperatura': temp} )"
-                  fill="outline"
-                  ><ion-icon name="arrow-down" class="icone"></ion-icon
-                ></ion-button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div *ngIf="devices.type === 'tv' ">
-          <div *ngIf="devices.estado_atual.estado ==='ligado'">
-            <div class="testei">
-              <div
-                class="x1i ion-activatable"
-                (click)="publish(devices._id,{'estado': 'desligado'})"
-              >
-                <ion-ripple-effect></ion-ripple-effect>
-                <div><ion-icon name="tv" class="bulbi"></ion-icon></div>
-
-                <div class="x12i">
-                  <div>
-                    <span text class="devicesID">{{devices.id}}</span>
-                  </div>
-                  <div><span text class="secondWord">Diretoria</span></div>
+                <div class="x2">
+                  <ion-icon name="radio-button-off" class="checkoff"></ion-icon>
                 </div>
-              </div>
-              <div class="x2i">
-                <ion-icon name="radio-button-on" class="checkon"></ion-icon>
-                <div class="opas"></div>
-              </div>
-              <div class="x11i">
-                <div class="x15i"></div>
-                <div class="x14i"></div>
-                <div class="x16i"></div>
-                <ion-button
-                  class="botao"
-                  (click)="publish(devices._id,{'ultimoBotao': 'volumemais'} )"
-                  fill="outline"
-                  ><ion-icon name="add" class="icone"></ion-icon
-                ></ion-button>
-                <ion-button
-                  class="botao"
-                  (click)="publish(devices._id,{'ultimoBotao': 'volumemenos'} )"
-                  fill="outline"
-                  ><ion-icon name="remove" class="icone"></ion-icon
-                ></ion-button>
               </div>
             </div>
           </div>
 
-          <div *ngIf="devices.estado_atual.estado ==='desligado'">
-            <div class="testei">
-              <div
-                class="x1i ion-activatable"
-                (click)="publish(devices._id,{'estado': 'ligado'})"
-              >
-                <ion-ripple-effect></ion-ripple-effect>
-                <div><ion-icon name="tv" class="bulbi"></ion-icon></div>
+          <div *ngIf="devices.type === 'ar condicionado' ">
+            <div *ngIf="devices.estado_atual.estado ==='ligado'">
+              <div class="testei">
+                <div
+                  class="x1i ion-activatable"
+                  (click)="publish(devices._id,{'estado': 'desligado'})"
+                >
+                  <ion-ripple-effect></ion-ripple-effect>
+                  <div><ion-icon name="snow" class="bulbi"></ion-icon></div>
 
-                <div class="x12i">
-                  <div>
-                    <span text class="devicesID">{{devices.id}}</span>
+                  <div class="x12i">
+                    <div>
+                      <span ion-text class="devicesID">{{devices.id}}</span>
+                    </div>
+                    <div>
+                      <span ion-text class="secondWord">Diretoria</span>
+                    </div>
                   </div>
-                  <div><span text class="secondWord">Diretoria</span></div>
+                </div>
+
+                <div class="x2i">
+                  <ion-icon name="radio-button-on" class="checkon"></ion-icon>
+                  <div class="opas"></div>
+                </div>
+
+                <div class="x11i">
+                  <div class="x15i"></div>
+                  <div class="rola">Tº: <ion-label>{{temp}}</ion-label></div>
+                  <div class="x14i"></div>
+                  <ion-button
+                    class="botao"
+                    (click)="temp===30?temp=temp:temp=temp+1"
+                    (click)="publish(devices._id,{'temperatura': temp} )"
+                    fill="outline"
+                    ><ion-icon name="arrow-up" class="icone"></ion-icon
+                  ></ion-button>
+                  <ion-button
+                    class="botao"
+                    (click)="temp===16?temp=temp:temp=temp-1"
+                    (click)="publish(devices._id,{'temperatura': temp} )"
+                    fill="outline"
+                    ><ion-icon name="arrow-down" class="icone"></ion-icon
+                  ></ion-button>
                 </div>
               </div>
-              <div class="x2i">
-                <ion-icon name="radio-button-off" class="checkoff"></ion-icon>
-                <div class="opas"></div>
-              </div>
-              <div class="x11i">
-                <div class="x15i"></div>
-                <div class="x14i"></div>
-                <div class="x16i"></div>
-                <ion-button
-                  class="botao"
-                  (click)="publish(devices._id,{'ultimoBotao': 'volumemais'} )"
-                  fill="outline"
-                  ><ion-icon name="add" class="icone"></ion-icon
-                ></ion-button>
-                <ion-button
-                  class="botao"
-                  (click)="publish(devices._id,{'ultimoBotao': 'volumemenos'} )"
-                  fill="outline"
-                  ><ion-icon name="remove" class="icone"></ion-icon
-                ></ion-button>
+            </div>
+
+            <div *ngIf="devices.estado_atual.estado ==='desligado'">
+              <div class="testei">
+                <div
+                  class="x1i ion-activatable"
+                  (click)="publish(devices._id,{'estado': 'ligado'})"
+                >
+                  <ion-ripple-effect></ion-ripple-effect>
+                  <div><ion-icon name="flame" class="bulbi"></ion-icon></div>
+
+                  <div class="x12i">
+                    <div>
+                      <span ion-text class="devicesID">{{devices.id}}</span>
+                    </div>
+                    <div>
+                      <span ion-text class="secondWord">Diretoria</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="x2i">
+                  <ion-icon name="radio-button-off" class="checkoff"></ion-icon>
+                  <div class="opas"></div>
+                </div>
+
+                <div class="x11i">
+                  <div class="x15i"></div>
+                  <div class="rola">Tº: <ion-label>{{temp}}</ion-label></div>
+                  <div class="x14i"></div>
+                  <ion-button
+                    class="botao"
+                    (click)="temp===30?temp=temp:temp=temp+1"
+                    (click)="publish(devices._id,{'temperatura': temp} )"
+                    fill="outline"
+                    ><ion-icon name="arrow-up" class="icone"></ion-icon
+                  ></ion-button>
+                  <ion-button
+                    class="botao"
+                    (click)="temp===16?temp=temp:temp=temp-1"
+                    (click)="publish(devices._id,{'temperatura': temp} )"
+                    fill="outline"
+                    ><ion-icon name="arrow-down" class="icone"></ion-icon
+                  ></ion-button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+
+          <div *ngIf="devices.type === 'tv' ">
+            <div *ngIf="devices.estado_atual.estado ==='ligado'">
+              <div class="testei">
+                <div
+                  class="x1i ion-activatable"
+                  (click)="publish(devices._id,{'estado': 'desligado'})"
+                >
+                  <ion-ripple-effect></ion-ripple-effect>
+                  <div><ion-icon name="tv" class="bulbi"></ion-icon></div>
+
+                  <div class="x12i">
+                    <div>
+                      <span text class="devicesID">{{devices.id}}</span>
+                    </div>
+                    <div><span text class="secondWord">Diretoria</span></div>
+                  </div>
+                </div>
+                <div class="x2i">
+                  <ion-icon name="radio-button-on" class="checkon"></ion-icon>
+                  <div class="opas"></div>
+                </div>
+                <div class="x11i">
+                  <div class="x15i"></div>
+                  <div class="x14i"></div>
+                  <div class="x16i"></div>
+                  <ion-button
+                    class="botao"
+                    (click)="publish(devices._id,{'ultimoBotao': 'volumemais'} )"
+                    fill="outline"
+                    ><ion-icon name="add" class="icone"></ion-icon
+                  ></ion-button>
+                  <ion-button
+                    class="botao"
+                    (click)="publish(devices._id,{'ultimoBotao': 'volumemenos'} )"
+                    fill="outline"
+                    ><ion-icon name="remove" class="icone"></ion-icon
+                  ></ion-button>
+                </div>
+              </div>
+            </div>
+
+            <div *ngIf="devices.estado_atual.estado ==='desligado'">
+              <div class="testei">
+                <div
+                  class="x1i ion-activatable"
+                  (click)="publish(devices._id,{'estado': 'ligado'})"
+                >
+                  <ion-ripple-effect></ion-ripple-effect>
+                  <div><ion-icon name="tv" class="bulbi"></ion-icon></div>
+
+                  <div class="x12i">
+                    <div>
+                      <span text class="devicesID">{{devices.id}}</span>
+                    </div>
+                    <div><span text class="secondWord">Diretoria</span></div>
+                  </div>
+                </div>
+                <div class="x2i">
+                  <ion-icon name="radio-button-off" class="checkoff"></ion-icon>
+                  <div class="opas"></div>
+                </div>
+                <div class="x11i">
+                  <div class="x15i"></div>
+                  <div class="x14i"></div>
+                  <div class="x16i"></div>
+                  <ion-button
+                    class="botao"
+                    (click)="publish(devices._id,{'ultimoBotao': 'volumemais'} )"
+                    fill="outline"
+                    ><ion-icon name="add" class="icone"></ion-icon
+                  ></ion-button>
+                  <ion-button
+                    class="botao"
+                    (click)="publish(devices._id,{'ultimoBotao': 'volumemenos'} )"
+                    fill="outline"
+                    ><ion-icon name="remove" class="icone"></ion-icon
+                  ></ion-button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
 
 <style>
