--- a/devdacticLogin/src/app/members/home/home.page.scss
+++ b/devdacticLogin/src/app/members/home/home.page.scss
@@ -131,10 +131,22 @@
   font-size: 40px;
   color: #0099ab;
 }
+
+.refresh {
+  background-color: transparent;
+}
+
 .background {
-  --background: url("../home/imagem.png");
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    172deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(0, 89, 145, 1) 0%,
+    rgba(90, 6, 128, 1) 59%
+  );
   height: 100%;
   width: 100%;
+  padding: 15px;
 }
 
 .opas {
