--- a/devdacticLogin/src/app/public/login/login.page.html
+++ b/devdacticLogin/src/app/public/login/login.page.html
@@ -1,25 +1,25 @@
-<ion-content padding class="background">
-  <div class="ajust"></div>
-  <div class="menu">
-    <ion-list>
-      <ion-item>
-        <ion-input
-          placeholder="Username"
-          [(ngModel)]="username"
-          class="texto"
-        ></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input
-          placeholder="Password"
-          type="password"
-          [(ngModel)]="password"
-        ></ion-input>
-      </ion-item>
-    </ion-list>
+<ion-content>
+  <div class="background">
+    <div class="ajust"></div>
+    <div class="menu">
+      <img src="assets/Logo - PEX AUTOMAÇÃO.png" classe="logo" width="220px" />
 
-    <ion-button (click)="login()" class="button" expand="block" fill="outline"
-      >Login</ion-button
-    >
+      <ion-input
+        placeholder="Usuário"
+        class="input"
+        [(ngModel)]="username"
+      ></ion-input>
+
+      <ion-input
+        placeholder="Senha"
+        class="input"
+        type="password"
+        [(ngModel)]="password"
+      ></ion-input>
+
+      <ion-button (click)="login()" class="button" expand="block" fill="outline"
+        >Login</ion-button
+      >
+    </div>
   </div>
 </ion-content>
