--- a/devdacticLogin/src/app/public/login/login.page.scss
+++ b/devdacticLogin/src/app/public/login/login.page.scss
@@ -3,16 +3,20 @@
 }
 
 .background {
-  --background: url("/imagem.png");
-  height: 100%;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    172deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(0, 89, 145, 1) 0%,
+    rgba(90, 6, 128, 1) 59%
+  );
   width: 100%;
-  align-content: center;
+  height: 100%;
+  padding-bottom: 180px;
 }
 
 .texto {
   width: 80%;
-  --color: whitesmoke;
-  --background: purple;
   --placeholder-color: whitesmoke;
   --placeholder-opacity: 0.7;
 }
@@ -20,8 +24,28 @@
 .ajust {
   height: 30%;
   width: 100%;
-  --background: url("https://ibb.co/TqRW3Qj");
   align-content: center;
+}
+
+.rounded {
+  width: 100%;
+  height: 100px;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.input {
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: grey;
+  --padding-bottom: 10px;
+  text-align: start;
+  --background: transparent;
+  color: whitesmoke;
+  margin-bottom: 10px;
 }
 
 .menu {
@@ -30,6 +54,10 @@
   box-shadow: 0 4px 8px 0 rba(0, 0, 0, 0.15);
   border-radius: 30px;
   padding: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
+  align-items: center;
+  text-align: center;
 }
 
 .button {
