--- a/devdacticLogin/src/app/members/alarms/alarms.page.scss
+++ b/devdacticLogin/src/app/members/alarms/alarms.page.scss
@@ -1,70 +1,12 @@
-.testei {
-  width: 305px;
-  flex-direction: row;
-  border-width: 1px;
-  display: flex;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px 0 rba(0, 0, 0, 0.15);
-  padding: 10px;
-  border-color: rgba(0, 0, 0, 0.2);
-  border-style: solid;
-  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.x11i {
-  width: 270px;
-  align-items: center;
-}
-
-.x1i {
-  width: 270px;
-  height: 120px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.x12i {
-  text-align: left;
-}
-
-.x13i {
-  background-color: rgba(0, 0, 0, 0.33);
-  flex: 1;
-  display: flex;
-  height: 100%;
-}
-
-.x2i {
-  width: 35px;
-  height: 120px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.bulbi {
-  font-size: 40px;
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.secondWord {
-  color: #949494;
-}
-
-.opas {
-  width: 35px;
-  height: 120px;
-}
-
-.opas2 {
-  width: 500px;
-  height: 200px;
-}
-
-.rola {
-  text-align: center;
-  height: 70px;
+.background {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    172deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(0, 89, 145, 1) 0%,
+    rgba(90, 6, 128, 1) 59%
+  );
+  height: 100% !important;
+  width: 100%;
+  padding: 15px;
 }
