--- a/devdacticLogin/src/app/members/dashboard/dashboard.page.html
+++ b/devdacticLogin/src/app/members/dashboard/dashboard.page.html
@@ -10,9 +10,9 @@
       <ion-label>Cenas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button>
+    <ion-tab-button tab="alarms">
       <ion-icon name="alarm"></ion-icon>
-      <ion-label>Em breve</ion-label>
+      <ion-label>Alarmes</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
