--- a/devdacticLogin/src/app/members/alarms/alarms.page.html
+++ b/devdacticLogin/src/app/members/alarms/alarms.page.html
@@ -20,5 +20,22 @@
     <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
+
+    <div *ngFor="let alarms of alarms">
+      <div class="buttons">
+        <ion-button class="bot" fill="outline">{{alarms.name}}</ion-button>
+        <ion-toggle
+          [(ngModel)]="alarms.estado"
+          (click)="mudarEstado(alarms._id, !alarms.estado)"
+        ></ion-toggle>
+        <ion-button
+          class="delCena"
+          fill="outline"
+          color="danger"
+          (click)="deletarAlarme(alarms._id)"
+          ><ion-icon name="close" class="icon"></ion-icon
+        ></ion-button>
+      </div>
+    </div>
   </div>
 </ion-content>
